feat: node resolve

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "sb": "node scripts/simple-build.js",
     "sbwp": "node scripts/simple-build-with-plugin.js",
-    "db": "node scripts/dynamic-build.js"
+    "db": "node scripts/dynamic-build.js",
+    "nr": "node scripts/node-resolve.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.2.1",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "rollup": "^2.70.2",
