--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "sbwp": "node scripts/simple-build-with-plugin.js",
     "db": "node scripts/dynamic-build.js",
     "nr": "node scripts/node-resolve.js",
-    "svm": "node scripts/simple-virtual-module.js"
+    "svm": "node scripts/simple-virtual-module.js",
+    "bt": "node scripts/babel-transpile.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,10 @@
   },
   "homepage": "https://github.com/phshy0607/test-rollup#readme",
   "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.2.1",
@@ -28,5 +33,8 @@
     "lodash-es": "^4.17.21",
     "rollup": "^2.70.2",
     "rollup-plugin-terser": "^7.0.2"
+  },
+  "dependencies": {
+    "core-js": "^3.22.2"
   }
 }
